test: update assertions in integration and unit tests to use getFirst() for improved readability